2009-02-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm:  Specify UTF-8 encoding in HTML header.

	* term/js/canvasmath.js:  This is a plug-in replacement for Jim Studt's
	original canvastext.js, supplemented with additional character glyphs
	from the Hershey font set including Greek letters and various math
	symbols.  The additional glyphs are all indexed by their Unicode code
	points.  If embedded in a UTF-8 document, everything works as it should.

2009-02-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/canvastext.js:  Correct some glyphs, modify slightly to allow
	non-ascii characters, and add a few examples of non-ascii glyphs.

2008-02-19  Peter Hedwig  <peter@affenbande.org>

	* term/lua/gnuplot.lua:  More forgiving regexp to catch the
	version/date string.

2009-02-19  Manfred Schwarb  <manfred99@gmx.ch>

	* src/gpexecute.c:  Remove a broken DEBUG section.

2009-02-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c:  The iteration code was getting confused by 3D plots
	that contain multiple data sets.  Do not assume that the Nth file
	mentioned on the command line is the Nth data set.  Bugfix.

2009-02-18  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* docs/gnuplot.doc:  Do not use an explicit extension in the names of
	figures to be processed by {pdf}latex.

	* term/post.trm:  Add missing intializer to various #define statements.

2009-02-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Make variable definition comply with C standard.

	* docs/gnuplot.doc docs/titlepag.tex term/cgm.trm term/canvas.trm:
	Reconcile duplicate index entries.  Add current version to title.

2009-02-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term_api.h src/term.c (set_term) set.c (set_terminal):
	Allow a string variable containing the requested terminal type.
	E.g.  screen = 'x11';  set term screen

2009-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	SF Patch #2570385: GPVAL_TERM_WINDOWID